gray background section fix <p> color contrast

--- a/style/_cofounder.scss
+++ b/style/_cofounder.scss
@@ -14,6 +14,10 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+
+        p {
+            color: #BDBDBD;
+        }
     }
 }
 
